# python-practise

./: Justfile  README.md  lefthook.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup-dependencies/: action.yml
.github/other-configurations/: labeler.yml  labeller.yml  labels.yml
.github/super-linter-configurations/: .yaml-lint.yml
.github/tool-configurations/: .linkspector.yml  labeller.yml
.github/workflows/: code-checks.yml  code-quality.yml  code-scanning.yml  code-test.yml  pull-request-labeller.yml  pull-request-tasks.yml  sync-labels.yml
challenges/HackerRank/DataStructures/Arrays/: challenge.py
challenges/leetcode/66_plus_one/: README.md  challenge.py  test_challenge.py
docs/: PROJECT_TECHNOLOGIES.md  SECURITY.md
githooks/: pre-commit
githooks/pre-commit-scripts/: python.sh
