[project]
name = "python-practise"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
  "ruff==0.11.7",
  "pytest==8.3.5",
  "pytest-cov==6.1.0",
  "zizmor==1.6.0",
]

[tool.uv]
required-version = "0.6.17"
package = false

[tool.setuptools]
py-modules = ["challenges"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statements
  "N802",    # Ignore function name should be lowercase
  "D103",    # Ignore missing docstring in public function"
  "SIM115",
  "PTH123",
  "N999",
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["challenge"]
