[project]
name = "python-practise"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
  "ruff==0.14.2",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "ty==0.0.1a24",
]

[tool.uv]
required-version = "~=0.9.0"
package = false

[tool.setuptools]
py-modules = ["challenges"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statements
  "N802",    # Ignore function name should be lowercase
  "D103",    # Ignore missing docstring in public function"
  "SIM115",
  "PTH123",
  "N999",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["challenge"]
